ignore visibility for .scss.ts type files + add variables config for styles and structure + adjust logo selected path to be corrected to home.

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,11 +1,13 @@
-@use '../../config/variables.scss';
+@use '../../config/variables/padding.scss' as *;
+@use '../../config/variables/screen.scss' as *;
+@use '../../config/variables/colors.scss' as *;
 
 .nav,
 .bar {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 0 var(--padding-20);
+    padding: 0 $pad-60;
     z-index: 100;
 
     ul {
@@ -13,7 +15,7 @@
         user-select: none;
         align-items: center;
         justify-content: space-between;
-        width: min(100%, var(--screen-xl));
+        width: min(100%, $size-max);
 
         li {
             list-style: none;
@@ -26,18 +28,19 @@
 }
 
 .bar {
-    background: #fff;
-    border-bottom: 2px solid #666;
-    box-shadow: 0 0 8px #666;
+    align-items: center;
+    background: $white;
+    border-bottom: 2px solid $dark-gray;
+    box-shadow: 0 0 8px $dark-gray;
     height: 36px;
 }
 
 .nav {
-    padding-top: var(--padding-4);
+    padding-top: $pad-4;
 
     a {
         text-decoration: none;
-        color: #333;
+        color: $black;
 
         &.selected {
             cursor: default;
@@ -48,16 +51,17 @@
     .logo {
         width: 117px;
         padding: 0;
+        z-index: 1;
 
         div {
             position: absolute;
             top: 12px;
             width: 117px;
-            border: 2px solid #666;
+            border: 2px solid $dark-gray;
             border-radius: 4px 4px 12px 4px;
-            padding: var(--padding-4) var(--padding-12);
-            box-shadow: 0 0 8px #666;
-            background: #fff;
+            padding: $pad-4 $pad-12;
+            box-shadow: 0 0 8px $dark-gray;
+            background: $white;
         }
     }
 
@@ -66,25 +70,25 @@
         justify-content: space-around;
         width: min(
             /* 74px = login tab & 117px = logo */
-                calc(100vw - (var(--padding-40) * 2) - 74px - 117px),
+                calc(100vw - ($pad-40 * 2) - 74px - 117px),
             560px
         );
 
         h2 {
-            padding: var(--padding-4) var(--padding-12);
+            padding: $pad-4 $pad-12;
         }
 
         a {
             &:hover {
-                color: #888;
+                color: $gray;
             }
 
             &:active {
-                color: #bbb;
+                color: $light-gray;
             }
 
             &.selected {
-                color: #888;
+                color: $gray;
             }
 
             &.selected h2 {
@@ -103,11 +107,11 @@
     .login {
         width: 74px;
         margin-top: -36px;
-        border: 2px solid #666;
-        background: #333;
-        color: #fff;
-        box-shadow: 0 0 8px #666;
-        padding: var(--padding-8) var(--padding-12);
+        border: 2px solid $dark-gray;
+        background: $black;
+        color: $white;
+        box-shadow: 0 0 8px $dark-gray;
+        padding: $pad-8 $pad-12;
         border-radius: 4px;
         transition: 0.1s;
 
